--- a/app/scss/global/_directions.scss
+++ b/app/scss/global/_directions.scss
@@ -5,6 +5,11 @@
   @include for-size(tablet-portrait) {
     background: none;
   }
+
+  @include for-size(medium) {
+    background: url("../images/phone/bg-courses.png") center no-repeat;
+    background-size: contain;
+  }
 }
 
 .section__content {
@@ -19,15 +24,118 @@
   }
 }
 
-.section__title {
-  font-size: $fz-section-sm;
+.directions__list {
+  @include for-size(medium) {
+    display: grid;
+    grid-template-columns: 250px 360px;
+    // grid-template-rows: repeat(auto-fill, max-content);
+    justify-content: center;
+    padding: 0;
+    gap: 18px 22px;
 
-  @include for-size(tablet-portrait) {
-    font-size: $fz-section-md;
+    & :first-child {
+      grid-row: span 3;
+    }
+
+    & :not(:first-child) {
+      flex-direction: row;
+    }
+
+    .course {
+      margin-bottom: 0;
+    }
+
+    .directions__item:not(:first-child) {
+      .course__image {
+        max-width: 150px;
+      }
+
+      .course__container {
+        position: relative;
+        justify-content: flex-start;
+        
+      }
+
+      .course__link {
+        position: absolute;
+        bottom: 25px;
+        right: 25px;
+        min-width: 30px;
+        padding: 5px 0;
+        align-self: flex-end;
+      }
+
+      .course__icon {
+        width: 9px;
+        height: 13px;
+      }
+    }
+
+    .course__description {
+      display: flex;
+      justify-content: center;
+      padding-right: 5px;
+      flex-direction: column;
+      padding: 0;
+      padding-left: 20px;
+      font-size: $fz-small-md;
+    }
   }
 
   @include for-size(desktop-big) {
-    font-size: $fz-section-lg;
+    grid-template-columns: 360px 1fr;
+    gap: 28px 34px;
+
+    & :first-child {
+      grid-row: span 3;
+      .course__image {
+        min-width: 400px;
+      }
+    }
+
+    & :not(:first-child) {
+      flex-direction: row;
+    }
+
+    .course {
+      margin-bottom: 0;
+    }
+
+    .directions__item:not(:first-child) {
+      .course__image {
+        max-width: 220px;
+      }
+
+      .course__container {
+        position: relative;
+        justify-content: flex-start;
+        
+      }
+
+      .course__link {
+        position: absolute;
+        bottom: 25px;
+        right: 25px;
+        min-width: 30px;
+        padding: 5px 0;
+        align-self: flex-end;
+      }
+
+      .course__icon {
+        width: 9px;
+        height: 13px;
+      }
+    }
+
+    .course__description {
+      display: flex;
+      justify-content: center;
+      padding-right: 5px;
+      flex-direction: column;
+      padding: 0;
+      padding-left: 20px;
+      font-size: $fz-small-md;
+    }
   }
 }
 
@@ -57,13 +165,14 @@
 .course__container {
   @include shadow;
   display: flex;
+  flex-grow: 1;
+  background: $color-white;
 }
 
 .course__description {
   flex-grow: 1;
   padding: 20px;
   font-size: $fz-small-md;
-  background: $color-white;
 }
 
 .course__title {
