--- a/app/scss/global/_team.scss
+++ b/app/scss/global/_team.scss
@@ -1,5 +1,6 @@
 .team {
   font-size: $fz-small-md;
+  line-height: 1.5;
   background: url("../images/phone/bg-team.png") left top -25px no-repeat;
   background-size: contain;
 
